unpackaged/main/default/objects/Contact/fields/NPSPv2_HouseholdID__c.field-meta.xml
<CustomField>
    <fullName>NPSPv2_HouseholdID__c</fullName>
    <description>Saved v2 HouseholdID before conversion</description>
    <label>DEPRECATED: NPSPv2 HouseholdID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>