unpackaged/main/default/objects/Contact/fields/Number_IContact_Opens__c.field-meta.xml
<CustomField>
    <fullName>Number_IContact_Opens__c</fullName>
    <label>Number IContact Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>