unpackaged/main/default/objects/Contact/fields/Pledge_Donations_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Donations_This_Year__c</fullName>
    <label>Pledge Donations This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>