unpackaged/main/default/objects/Contact/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Power-of-One</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>