unpackaged/main/default/objects/Contact/fields/Professional_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Professional_Suffix__c</fullName>
    <description>Profesional suffix of the contact (PhD, MD, PMP, etc).</description>
    <inlineHelpText>Profesional suffix of the contact (PhD, MD, PMP, etc).</inlineHelpText>
    <label>Professional Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>