unpackaged/main/default/objects/Contact/fields/Relationship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Contact__c</fullName>
    <label>Relationship to Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>