unpackaged/main/default/objects/Contact/fields/Repeat_CF_Volunteer_within_365_Days__c.field-meta.xml
<CustomField>
    <fullName>Repeat_CF_Volunteer_within_365_Days__c</fullName>
    <label>Repeat CF Volunteer within 365 Days</label>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.Shift_Date_within_365_Days__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>