unpackaged/main/default/objects/Contact/fields/Repeating_Art_House_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Repeating_Art_House_Volunteer__c</fullName>
    <inlineHelpText>Number of volunteer opportunities the Contact has completed in this volunteer area.</inlineHelpText>
    <label>Repeating Art House Volunteer</label>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>a0d1Y00000DZafKQAT, a0d1Y00000HhfWOQAZ, a0d1Y00000HhfWTQAZ, a0d1Y00000I4IQhQAN, a0d5d00000IGnaRAAT, a0di0000009B5DTAA0</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>