unpackaged/main/default/objects/Contact/fields/Repeating_Cinema_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Repeating_Cinema_Volunteer__c</fullName>
    <inlineHelpText>Number of volunteer opportunities the Contact has completed in this volunteer area.</inlineHelpText>
    <label>Repeating Cinema Volunteer</label>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>a0di000000AXTot</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>