unpackaged/main/default/objects/Contact/fields/Repeating_Community_Inn_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Repeating_Community_Inn_Volunteer__c</fullName>
    <inlineHelpText>Number of volunteer opportunities the Contact has completed in this volunteer area.</inlineHelpText>
    <label>Repeating Community Inn Volunteer</label>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>(a0d1Y00000C9SadQAF,a0d1Y00000C9VEqQAN,a0d1Y00000DF5bvQAD,a0d1Y00000EzlgwQAB,a0d1Y00000IE3efQAD,a0d5d00000IGl9YAAT,a0di0000008Pt5CAAS)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>