unpackaged/main/default/objects/Contact/fields/Repeating_Furniture_Prep_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Repeating_Furniture_Prep_Volunteer__c</fullName>
    <label>Repeating Furniture Prep Volunteer</label>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>a0d5d00000IINkOAAX</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>