unpackaged/main/default/objects/Contact/fields/Report_Special_Tag__c.field-meta.xml
<CustomField>
    <fullName>Report_Special_Tag__c</fullName>
    <description>Special report tag</description>
    <label>DEPRECATED: Report Special Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>