unpackaged/main/default/objects/Contact/fields/SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Status__c</fullName>
    <description>This field is automatically set via flow automation on the MessagingEndUser.</description>
    <inlineHelpText>This field is automatically set when a Contact opts in or out of SMS messages.</inlineHelpText>
    <label>SMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoublyOptedIn</fullName>
            </value>
            <value>
                <fullName>ExplicitlyOptedIn</fullName>
            </value>
            <value>
                <fullName>ImplicitlyOptedIn</fullName>
            </value>
            <value>
                <fullName>OptedOut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>