unpackaged/main/default/objects/Contact/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Not Used by MLF. Use the NAME field to include a Suffix for the Contact.</description>
    <inlineHelpText>Not Used by MLF. Use the NAME field to include a Suffix for the Contact.</inlineHelpText>
    <label>Suffix (Deprecated)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>