unpackaged/main/default/objects/Contact/fields/Sustainer_Status__c.field-meta.xml
<CustomField>
    <fullName>Sustainer_Status__c</fullName>
    <label>Sustainer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>