unpackaged/main/default/objects/Contact/fields/Tax_Stmnt_Amt3_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Stmnt_Amt3_Last_Year__c</fullName>
    <formula>Account.Tax_Stmnt_Amt3_Last_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Stmnt Amt3 - Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>