unpackaged/main/default/objects/Contact/fields/Total_Full_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Full_Soft_Credit__c</fullName>
    <label>Total Full Soft Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>