unpackaged/main/default/objects/Contact/fields/Total_Soft_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Soft_Credits__c</fullName>
    <description>Roll-up Helper calculation</description>
    <label>Total Soft Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>