unpackaged/main/default/objects/Contact/fields/Tracker_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Access_Level__c</fullName>
    <description>Access Level for Volunteer as set in Tracker</description>
    <inlineHelpText>Access Level for Volunteer as set in Tracker</inlineHelpText>
    <label>Tracker Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer Coordinator</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Community Admin</fullName>
            </value>
            <value>
                <fullName>HQ Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>