unpackaged/main/default/objects/Contact/fields/Tracker_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Contact_ID__c</fullName>
    <description>Data Sync Reference from Tracker</description>
    <externalId>true</externalId>
    <inlineHelpText>Data Sync Reference from Tracker</inlineHelpText>
    <label>Tracker Contact ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>