unpackaged/main/default/objects/Contact/fields/Truck_Ministry_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Truck_Ministry_Volunteer__c</fullName>
    <formula>IF( ISNULL(Tracker_Contact_ID__c) || ISBLANK (Tracker_Contact_ID__c), FALSE, TRUE  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Ministry Volunteer</label>
    <type>Checkbox</type>
</CustomField>