unpackaged/main/default/objects/Contact/fields/Volunteer_Addl_Comments__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Addl_Comments__c</fullName>
    <label>Volunteer Addl Comments</label>
    <type>TextArea</type>
</CustomField>