unpackaged/main/default/objects/Contact/fields/Volunteer_Addl_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Addl_Family_Members__c</fullName>
    <label>Volunteer Addl Family Members</label>
    <type>TextArea</type>
</CustomField>