unpackaged/main/default/objects/Contact/fields/Volunteer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Agreement__c</fullName>
    <defaultValue>&quot;http://mlf.org/volunteer-agreement/&quot;</defaultValue>
    <label>Volunteer Agreement</label>
    <type>Url</type>
</CustomField>