unpackaged/main/default/objects/Contact/fields/Volunteer_Artistic_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Artistic_Interests__c</fullName>
    <label>DEPRECATED: Volunteer Artistic Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts/Crafts</fullName>
            </value>
            <value>
                <fullName>Designing</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Sewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>