unpackaged/main/default/objects/Contact/fields/Volunteer_Communications_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Communications_Interests__c</fullName>
    <label>DEPRECATED: Vol Communications Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Media/Videography</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Socializing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>