unpackaged/main/default/objects/Contact/fields/Volunteer_Custom_Shifts_Completed__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Custom_Shifts_Completed__c</fullName>
    <description>This field counts the number of Volunteer Hour records Completed for a Shift for a Contact for a timeframe. The time frame is dynamically modified by the System Admin based on reporting needs of the Volunteer Team.</description>
    <inlineHelpText>See System Admin for more information.This field counts the number of Volunteer Hour records Completed for a Shift for a Contact for a timeframe. The time frame is dynamically modified by the System Admin based on reporting needs of the Volunteer Team.</inlineHelpText>
    <label>Volunteer Custom - Shifts Completed</label>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>