unpackaged/main/default/objects/Contact/fields/Volunteer_Direct_Service_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Direct_Service_Interests__c</fullName>
    <label>DEPRECATED: Vol Direct Service Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Errand Transport</fullName>
            </value>
            <value>
                <fullName>Serving Food</fullName>
            </value>
            <value>
                <fullName>Sorting</fullName>
            </value>
            <value>
                <fullName>Visiting Residents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>