unpackaged/main/default/objects/Contact/fields/Volunteer_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Disclaimer__c</fullName>
    <defaultValue>&quot;For MLF use only. By signing up you are agreeing to the terms and conditions of the Mobile Loaves &amp; Fishes Volunteer Agreement&quot;</defaultValue>
    <label>Volunteer Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>