unpackaged/main/default/objects/Contact/fields/Volunteer_Genesis_Gardens_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Genesis_Gardens_Interests__c</fullName>
    <label>DEPRECATED: Vol Genesis Garden Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Care</fullName>
            </value>
            <value>
                <fullName>Bees</fullName>
            </value>
            <value>
                <fullName>Building Projects</fullName>
            </value>
            <value>
                <fullName>Canning</fullName>
            </value>
            <value>
                <fullName>Cooking/Hospitality</fullName>
            </value>
            <value>
                <fullName>Display/Presentation</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Good/Food Distribution Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>