unpackaged/main/default/objects/Contact/fields/Volunteer_Office_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Office_Interests__c</fullName>
    <label>DEPRECATED: Vol Office Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Support</fullName>
            </value>
            <value>
                <fullName>Computer/IT</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Scanning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>