unpackaged/main/default/objects/Contact/fields/Volunteer_Physical_Work_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Physical_Work_Interests__c</fullName>
    <label>DEPRECATED: Vol Physical Work Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Repair RV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>