unpackaged/main/default/objects/Contact/fields/Volunteer_Program_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Program_Interests__c</fullName>
    <description>Volunteer Interests syncs with VolExp website. Any change to the picklist values must be updated in Wordpress as well.</description>
    <inlineHelpText>Volunteer Interests are sync&#39;d with the User Profile on the VolExp website.</inlineHelpText>
    <label>Volunteer Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Art House</fullName>
            </value>
            <value>
                <fullName>Community Inn</fullName>
            </value>
            <value>
                <fullName>Community Market</fullName>
            </value>
            <value>
                <fullName>Culinary</fullName>
            </value>
            <value>
                <fullName>Genesis Gardens</fullName>
            </value>
            <value>
                <fullName>New Home Prep</fullName>
            </value>
            <value>
                <fullName>Property Beautification / Landscaping</fullName>
            </value>
            <value>
                <fullName>Any Program or Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>