unpackaged/main/default/objects/Contact/fields/Volunteer_Release_Guardian_Signature__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Release_Guardian_Signature__c</fullName>
    <description>If volunteer is under 18, need parent/guardian signature</description>
    <label>Guardian Name for Volunteer Under18</label>
    <length>50</length>
    <type>Text</type>
</CustomField>