unpackaged/main/default/objects/Contact/fields/Volunteer_Release_Signature__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Release_Signature__c</fullName>
    <description>Signature of Media, Release and Waiver Form</description>
    <label>Volunteer Release Signature</label>
    <length>50</length>
    <type>Text</type>
</CustomField>