unpackaged/main/default/objects/Contact/fields/Volunteer_Release_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Release_Signature_Date__c</fullName>
    <label>Volunteer Agreement Date</label>
    <type>Date</type>
</CustomField>