unpackaged/main/default/objects/Contact/fields/Volunteer_Self_Description__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Self_Description__c</fullName>
    <label>Volunteer Self Description</label>
    <type>TextArea</type>
</CustomField>