unpackaged/main/default/objects/Contact/fields/Volunteer_Special_Skills__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Special_Skills__c</fullName>
    <label>Volunteer Special Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Care Giving</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>IT/Technical/Scientific</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing/Advertising/Promotion</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Psychology/Mental Health</fullName>
            </value>
            <value>
                <fullName>Teaching</fullName>
            </value>
            <value>
                <fullName>Writer/Blogger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>